--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -11,7 +11,7 @@
     "permissions": [
         "webRequest",
         "webRequestBlocking",
-        "<all_urls"
+        "<all_urls>"
     ],
     "background": {
         "service_worker": "background.js"
