--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -11,7 +11,9 @@
     "permissions": [
         "webRequest",
         "webRequestBlocking",
-        "<all_urls>"
+        "<all_urls>",
+        "*://*.googleadservices.com/*",
+        "*://*.tpc.googlesyndication.com/*"
     ],
     "background": {
         "service_worker": "background.js"
