refactor: remove url filtering in manifest.json

--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -11,9 +11,7 @@
     "permissions": [
         "webRequest",
         "webRequestBlocking",
-        "<all_urls>",
-        "*://*.googleadservices.com/*",
-        "*://*.tpc.googlesyndication.com/*"
+        "<all_urls>"
     ],
     "background": {
         "service_worker": "background.js"
