--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,5 +1,5 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "AdBlock Extension",
     "description": "AdBlock extension in Typescript",
     "version": "1.0.0",
@@ -9,10 +9,17 @@
         "128": "icon.png"
     },
     "permissions": [
-        "webRequest",
-        "webRequestBlocking",
-        "<all_urls>"
+        "declarativeNetRequest"
     ],
+    "declarative_net_request": {
+        "rule_resources": [
+            {
+                "id": "rule_set1",
+                "enabled": true,
+                "path": "rules.json"
+            }
+        ]
+    },
     "background": {
         "service_worker": "background.js"
     },
